--- a/style.css
+++ b/style.css
@@ -1,24 +1,36 @@
 body {
-    padding-top: 10px;
-  }
+  padding-top: 10px;
+}
 
-  div {
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-  }
+div {
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+}
 
-  .box-menu {
-    padding: 3% 10% 3% 10%;
-  }
+img {
+  object-fit: cover;
+  width: 100%;
+  height: 100px;
+}
 
-  .info-menu {
-    margin-bottom: 1%;
-  }
+.image-menu {
+  display: inline-block;
+  width: 30%;
+  height: 30%;
+}
 
-  .button {
-    border-radius: 20px;
-    font-size:80%;
-    size: 100%;
-    background-color: lightblue;
-  }
+.box-menu {
+  padding: 3% 10% 3% 10%;
+}
+
+.info-menu {
+  margin-bottom: 1%;
+}
+
+.button {
+  border-radius: 20px;
+  font-size: 80%;
+  size: 100%;
+  background-color: lightblue;
+}
